# img_processing

./: .gitignore  LabCode1_12210634_吴丰杨.ipynb  README.md  generate_aruco_marker.py
basketball_detector/: CMakeLists.txt  README.md
basketball_detector/include/: BasketballDetector.h
basketball_detector/src/: BasketballDetector.cpp  main.cpp
hoop_detect/: SimpleGrab.py  calibrate.py  capture_calibration.py  circle_detector.py  example.py  test.py
hoop_detect/SimpleGrab/: CMakeLists.txt  SimpleGrab.cpp
hoop_detect/basket_hoop_detector/: CMakeLists.txt  README.md
hoop_detect/basket_hoop_detector/launch/: hoop_detector.launch.py
hoop_detect/basket_hoop_detector/src/: hsv_calibrator.cpp
hoop_detect/ellipse_detection/: CMakeLists.txt  README.md
hoop_detect/ellipse_detection/include/: hoop_detector.hpp
hoop_detect/ellipse_detection/src/: hik_camera.cpp  hoop_detector.cpp  hsv_calibrator.cpp  main.cpp
hoop_detect/non_ros_ellipse_detection/: CMakeLists.txt  README.md
hoop_detect/non_ros_ellipse_detection/include/: hik_camera.hpp  hoop_detector.hpp
hoop_detect/non_ros_ellipse_detection/src/: hik_camera.cpp  hoop_detector.cpp  main.cpp
hoop_detect/ros2_hoop_detector/: package.xml
hoop_detect/ros2_hoop_detector/config/: hsv_config.yaml
hoop_detect/ros2_hoop_detector/include/basket_hoop_detector/: hik_camera.hpp
hoop_detect/ros2_hoop_detector/src/: camera_calibrator.cpp  hik_camera.cpp  hoop_detector_node.cpp
lab1/: LabCode1_12210634_吴丰杨.ipynb  proj_model.tex  test.ipynb  test.py
lab2/: Q3_3_local_hist_equ-10.tif  Q3_3_local_hist_equ-20.tif  Q3_3_local_hist_equ-30.tif  Q3_4_filtered.tif  Q3_4_filtered_3.tif  Q3_4_filtered_5.tif  Q3_4_filtered_7.tif  spatial_trans.ipynb
lab3/: Enhanced_Q4_1.tif  Enhanced_Q4_2.tif  Sharpened_Q4_1.tif  Sharpened_Q4_2.tif  lab3.py
lab4/: lab4.ipynb  lab4_1.py  lab4_2.py  lab4_3.py  lab4_4.py  lab5.ipynb  lab5.py  test.py
lab5/: lab5.ipynb
project_chess/: detect_hand.py  filename.txt  wzq2.py  ~$报告.docx  报告.docx
project_chess/20240222-Gobang-bot-main/: config_4.py  new_main.py
project_chess/20240222-Gobang-bot-main/data/: chang_color.py
project_chess/20240222-Gobang-bot-main/save/: game_2024-12-12_16-06-35.txt  game_2024-12-12_16-44-09.txt  game_2024-12-12_16-45-24.txt  game_2024-12-12_16-49-36.txt  test.txt  test2.txt  wrong.txt
